Add anomaly_type (ex. anomaly_level) field to measurement spec
* Refactor the measurements swagger spec to minimise duplication
